crates/typechecker/tests/snapshots/fixture_test__explicit_type_args.snap
---
source: crates/typechecker/tests/fixture_test.rs
expression: snapshot
---
eq: forall g. fn(g, g) -> Bool
lt: forall h. fn(h, h) -> Bool
combine: forall g. fn(g, g) -> g
sub: forall g. fn(g, g) -> g
mul: forall g. fn(g, g) -> g
div: forall g. fn(g, g) -> g
neg: forall g. fn(g) -> g
show: forall g. fn(g) -> String
hash: forall g. fn(g) -> Int
close: forall g. fn(own g) -> Unit
peek: forall h. fn(h) -> h
println: forall m. fn(m) -> Unit
Some: forall e. fn(e) -> Option[e]
None: forall e. Option[e]
Ok: forall f g. fn(g) -> Result[f, g]
Err: forall f g. fn(f) -> Result[f, g]
Cons: forall h. fn(h, List[h]) -> List[h]
Nil: forall h. List[h]
LT: Ordering
EQ: Ordering
GT: Ordering
Cons: forall h. fn(h, List[h]) -> List[h]
Nil: forall h. List[h]
map: forall w y. fn(List[w], fn(w) -> y) -> List[y]
identity: forall k1. fn(k1) -> k1
stringify: fn(Int) -> String
call_site: fn() -> Int
standalone: fn() -> Int
method_site: fn(List[Int]) -> List[String]
